# github-rest

./: .gitignore  CHANGELOG.md  DEVELOPER.md  README.md  github-rest.cabal  package.yaml  stack-ghc-8.10.yaml  stack-ghc-8.2.yaml  stack-ghc-8.4.yaml  stack-ghc-8.6.yaml  stack-ghc-8.8.yaml  stack-ghc-9.0.yaml  stack-ghc-9.2.yaml  stack-ghc-9.4.yaml  stack-linters.yaml  stack.yaml
.circleci/: config.yml
.github/workflows/: ci.yml  release.yml
scripts/: GetVersion.hs  fourmolu.sh  hlint.sh  make_release.py
src/GitHub/: REST.hs
src/GitHub/REST/: Auth.hs  Endpoint.hs  KeyValue.hs  Monad.hs  PageLinks.hs
src/GitHub/REST/Monad/: Class.hs
test/: Auth.hs  Endpoint.hs  Helpers.hs  Main.hs  MockQuery.hs  PageLinks.hs  Query.hs
test/goldens/: gists-gist_id-sha-404.golden  gists-gist_id-sha-422.golden  gists-gist_id-sha.golden
