cabal-version: >= 1.10

name:           github-rest
version:        1.2.1
synopsis:       Query the GitHub REST API programmatically
description:    Query the GitHub REST API programmatically, which can provide a more
                flexible and clear interface than if all of the endpoints and their types
                were defined as Haskell values.
category:       GitHub
homepage:       https://github.com/brandonchinn178/github-rest#readme
bug-reports:    https://github.com/brandonchinn178/github-rest/issues
author:         Brandon Chinn <brandonchinn178@gmail.com>
maintainer:     Brandon Chinn <brandonchinn178@gmail.com>
license:        BSD3
license-file:   LICENSE.md
build-type:     Simple
extra-source-files:
    README.md
    CHANGELOG.md
    test/goldens/gists-gist_id-sha.golden

source-repository head
  type: git
  location: https://github.com/brandonchinn178/github-rest

library
  exposed-modules:
      GitHub.REST
      GitHub.REST.Auth
      GitHub.REST.Endpoint
      GitHub.REST.KeyValue
      GitHub.REST.Monad
      GitHub.REST.Monad.Class
      GitHub.REST.PageLinks
  other-modules:
      Paths_github_rest
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wnoncanonical-monad-instances -Wunused-packages
  build-depends:
      aeson
    , base <5
    , bytestring
    , crypton
    , http-client >=0.5.13
    , http-client-tls
    , http-types >=0.11
    , jose-jwt >=0.10.0
    , mtl
    , scientific
    , text
    , time
    , transformers
    , unliftio
    , unliftio-core
  default-language: Haskell2010

test-suite github-rest-test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
      Auth
      Endpoint
      Helpers
      MockQuery
      PageLinks
      Query
      Paths_github_rest
  hs-source-dirs:
      test
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wnoncanonical-monad-instances -Wunused-packages
  build-depends:
      aeson >=1.5.6.0
    , aeson-qq >=0.8.4
    , base
    , bytestring
    , crypton
    , github-rest
    , http-types
    , mtl
    , tasty
    , tasty-golden
    , tasty-hunit
    , tasty-quickcheck >=0.8.1
    , text
  default-language: Haskell2010
